# MPM3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
FileOps/: CMakeLists.txt  FileOps_pcp.cpp  FileOps_pcp.h  common_utilities.cpp  common_utilities.h
Geometry/: CMakeLists.txt  DetectCollisionSAT.hpp  ExtractEdgeFromT2DMesh.cpp  ExtractEdgeFromT2DMesh.h  ExtractSurfaceFromT3DMesh.cpp  ExtractSurfaceFromT3DMesh.h  Geometry.cpp  Geometry.h  Geometry2D.h  Geometry3D.h  GeometryUtils.cpp  GeometryUtils.h  Geometry_pcp.cpp  Geometry_pcp.h  Grid2D.hpp  Grid3D.hpp  NumPairHashTable.hpp  PDSBgGrid2D.cpp  PDSBgGrid2D.hpp  ParticleGenerator2D.hpp  ParticleGenerator3D.hpp  RandomPointQueue.cpp  RandomPointQueue.h  SearchGrid2DLine.hpp  SearchGrid2DTriangle.hpp  SearchGrid3DTetrahedron.hpp  SearchGrid3DTriangle.hpp  SearchingGrid2D.hpp  SearchingGrid3D.hpp  TetrahedronMesh.cpp  TetrahedronMesh.h  TetrahedronMeshTemplate.hpp  TetrahedronUtils.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshTemplate.hpp  TriangleUtils.h  TriangleUtils_f.h
MaterialModels/: CMakeLists.txt  LinearElasticity.cpp  LinearElasticity.h  MatModelConstants.h  MatModelContainer.cpp  MatModelContainer.h  MatModelIdToPointerMap.cpp  MatModelIdToPointerMap.h  MatModelTestUtils.cpp  MatModelTestUtils.h  MatModelUtils.cpp  MatModelUtils.h  MaterialModel.h  MaterialModelInitializer.cpp  MaterialModelInitializer.h  MaterialModelPrecision.h  MaterialModelType.h  MaterialModels_pcp.cpp  MaterialModels_pcp.h  ModelContainer.cpp  ModelContainer.h  ModifiedCamClay.cpp  ModifiedCamClay.h  ModifiedCamClay1.cpp  ModifiedCamClay1.h  MohrCoulombWrapper.cpp  MohrCoulombWrapper.h  NorsandWrapper.cpp  NorsandWrapper.h  SandHypoplasticityByUmat.cpp  SandHypoplasticityByUmat.h  SandHypoplasticityStbWrapper.cpp  SandHypoplasticityStbWrapper.h  SandHypoplasticityWrapper.cpp  SandHypoplasticityWrapper.h  StressInvariant.h  SymMatEigen _ori.cpp  SymMatEigen.cpp  SymMatEigen.h  Tresca.cpp  (+16 more)
MemoryUtils/: CMakeLists.txt  ItemArray.hpp  ItemArrayFast.hpp  ItemBuffer.hpp  ItemStack.hpp  MemoryBuffer.h  MemoryUtils_pcp.cpp  MemoryUtils_pcp.h  PreAllocStringBuffer.hpp  StringBuffer.h
ModelViewer/: AnimationGenerationController.cpp  AnimationGenerationController.h  BallParticleBuffer.cpp  BallParticleBuffer.h  CMakeLists.txt  ColorGraph.h  DivisionSet.cpp  DivisionSet.h  Hdf5DataLoader.cpp  Hdf5DataLoader.h  Hdf5Field.cpp  Hdf5Field.h  Hdf5FieldExtraction.h  Hdf5FieldExtraction_density.cpp  Hdf5FieldExtraction_density.h  Hdf5FieldExtraction_density_f.cpp  Hdf5FieldExtraction_density_s.cpp  Hdf5FieldExtraction_density_s.h  Hdf5FieldExtraction_e11.cpp  Hdf5FieldExtraction_e11.h  Hdf5FieldExtraction_e12.cpp  Hdf5FieldExtraction_e12.h  Hdf5FieldExtraction_e22.cpp  Hdf5FieldExtraction_e22.h  Hdf5FieldExtraction_e23.cpp  Hdf5FieldExtraction_e23.h  Hdf5FieldExtraction_e31.cpp  Hdf5FieldExtraction_e31.h  Hdf5FieldExtraction_e33.cpp  Hdf5FieldExtraction_e33.h  Hdf5FieldExtraction_ee11.cpp  Hdf5FieldExtraction_ee11.h  Hdf5FieldExtraction_ee12.cpp  Hdf5FieldExtraction_ee12.h  Hdf5FieldExtraction_ee22.cpp  Hdf5FieldExtraction_ee22.h  Hdf5FieldExtraction_ee23.cpp  Hdf5FieldExtraction_ee23.h  Hdf5FieldExtraction_ee31.cpp  Hdf5FieldExtraction_ee31.h  (+289 more)
ResultViewerQt/: CMakeLists.txt  GLBufferObject.cpp  GLBufferObject.h  GLWindow.cpp  GLWindow.h  Geometry.cpp  Geometry.h  MainWindow.cpp  MainWindow.h  ResultViewerQt_main.cpp  ResultViewerQt_pcp.cpp  ResultViewerQt_pcp.h  TetrahedronMesh.cpp  TetrahedronMesh.h  hdf5_utils.cpp  hdf5_utils.h
Simulations/: BC.h  BCs.h  CMakeLists.txt  CMakeLists.txt.bak  FixedSizeMemAllocator.h  GLModelWindow.cpp  GLModelWindow.h  Model.h  ModelData.cpp  ModelData.h  ModelData_FEM_T3D_ME_s.cpp  ModelData_FEM_T3D_ME_s.h  ModelData_T2D_CHM_p.cpp  ModelData_T2D_CHM_p.h  ModelData_T2D_CHM_s.cpp  ModelData_T2D_CHM_s.h  ModelData_T2D_ME_p.cpp  ModelData_T2D_ME_p.h  ModelData_T2D_ME_s.cpp  ModelData_T2D_ME_s.h  ModelData_T3D_CHM_s.cpp  ModelData_T3D_CHM_s.h  ModelData_T3D_ME_s.cpp  ModelData_T3D_ME_s.h  ModelToViewer3D.hpp  ModelToViewerBase.h  ModelViewer3D.cpp  ModelViewer3D.h  ModelWindow.cpp  ModelWindow.h  Model_FEM_T3D_ME_s.cpp  Model_FEM_T3D_ME_s.h  Model_FEM_T3D_ME_s_hdf5_utilities.cpp  Model_FEM_T3D_ME_s_hdf5_utilities.h  Model_T2D_CHM_d.cpp  Model_T2D_CHM_d.h  Model_T2D_CHM_p.cpp  Model_T2D_CHM_p.h  Model_T2D_CHM_p_hdf5_utilities.cpp  Model_T2D_CHM_p_hdf5_utilities.h  (+116 more)
SimulationsOMP/: CMakeLists.txt  DataMem.cpp  DataMem.h  DivideTask.hpp  MSDRadixSortTask.cpp  MSDRadixSortTask.h  MSDRadixSortUtils.cpp  MSDRadixSortUtils.h  MergeTask.hpp  ModelData_T2D_CHM_mt.cpp  ModelData_T2D_CHM_mt.h  ModelData_T2D_ME_mt.cpp  ModelData_T2D_ME_mt.h  ModelData_T3D_CHM_mt.cpp  ModelData_T3D_CHM_mt.h  ModelData_T3D_CHM_up_mt.cpp  ModelData_T3D_CHM_up_mt.h  ModelData_T3D_ME_mt.cpp  ModelData_T3D_ME_mt.h  Model_R2D_ME_mt.cpp  Model_R2D_ME_mt.h  Model_T2D_CHM_mt.cpp  Model_T2D_CHM_mt.h  Model_T2D_CHM_mt_hdf5_utilities.cpp  Model_T2D_CHM_mt_hdf5_utilities.h  Model_T2D_ME_mt.cpp  Model_T2D_ME_mt.h  Model_T2D_ME_mt_hdf5_utilities.cpp  Model_T2D_ME_mt_hdf5_utilities.h  Model_T3D_CHM_mt.cpp  Model_T3D_CHM_mt.h  Model_T3D_CHM_mt_hdf5_utilities.cpp  Model_T3D_CHM_mt_hdf5_utilities.h  Model_T3D_CHM_up_mt.cpp  Model_T3D_CHM_up_mt.h  Model_T3D_CHM_up_mt_hdf5_utilities.cpp  Model_T3D_CHM_up_mt_hdf5_utilities.h  Model_T3D_ME_mt.cpp  Model_T3D_ME_mt.h  Model_T3D_ME_mt_hdf5_utilities.cpp  (+138 more)
Tests/: CMakeLists.txt  Tests_main.cpp  Tests_pcp.cpp  Tests_pcp.h  disp_utils.h  test_AnimationMPM3DApp.cpp  test_Model_T2D_ME_s_display.cpp  test_Model_T3D_ME_s_display.cpp  test_PospSingleFrame_display.cpp  test_PropsMPM3DApp.cpp  test_RigidTetrahedronMesh.cpp  test_RigidTetrahedronMesh_display.cpp  test_RigidTetrahedronMesh_rotation.cpp  test_fem_t3d_me_s_1d_compression.cpp  test_fem_t3d_me_s_1d_compression2.cpp  test_geometry.h  test_hypoplasticity_match_Wichtmann.cpp  test_mat_model_utils.cpp  test_material_models.h  test_mcc_compression.cpp  test_mcc_get_Su.cpp  test_model_container.cpp  test_model_view.h  test_random_point_for_Model_T2D_ME_s.cpp  test_simulations.h  (+51 more)
(+439 files in other folders)
